# powerbi-analyst-mcp

./: .env.example  .envrc  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  glama.json  pyproject.toml  requirements.txt  server.json  server.py
.github/workflows/: publish.yml  tests.yml
bundle/: .gitignore  .mcpbignore  README.md  build.sh  manifest.json  manifest.template.json  pyproject.toml
bundle/powerbi_mcp/: auth.py  config.py  history.py  output.py
bundle/server/: README.md  main.py
powerbi_mcp/: __init__.py  app.py  auth.py  client.py  config.py  history.py  knowledge.py  knowledge_client.py  models.py  tools.py
tests/: conftest.py  test_client.py  test_history.py  test_knowledge_client.py  test_knowledge_tools.py  test_models.py  test_output.py  test_tools.py
tests/integration/: test_live_api.py
