[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "powerbi-analyst-mcp"
version = "0.3.1"
description = "Read-only MCP server for Power BI semantic models — query workspaces, datasets, and execute DAX via any MCP client"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "msal>=1.28.0",
    "msal-extensions>=1.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
powerbi-analyst-mcp = "powerbi_mcp.app:main"

[tool.hatch.build.targets.wheel]
packages = ["powerbi_mcp"]
