[project]
name = "powerbi-analyst-mcp"
version = "0.4.0"
description = "Read-only MCP server for Power BI semantic models — query workspaces, datasets, and execute DAX via any MCP client"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "msal>=1.28.0",
    "msal-extensions>=1.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
]
